feat: Refactor chat input and send button layout
Moves the send button inside a container to facilitate dynamic visibility and positioning changes. This improves the visual structure of the chat input area.

--- a/index.html
+++ b/index.html
@@ -204,16 +204,18 @@
                 <i class="fa fa-paperclip text-lg"></i>
                 <input type="file" id="image-upload" class="hidden" accept="image/*">
             </label>
-            <input type="text" id="chat-input" placeholder="پیام خود را بنویسید..." class="flex-grow bg-transparent border-none focus:outline-none text-white placeholder-gray-400 mx-2">
-            <button id="send-text-btn" aria-label="ارسال پیام" class="hidden flex-shrink-0 w-14 h-14 bg-gradient-to-br from-emerald-600 to-green-900 rounded-full flex items-center justify-center text-white text-2xl transition-all duration-300 transform hover:scale-105">
-                <i class="fa fa-paper-plane"></i>
-            </button>
-            <button id="main-action-btn" aria-label="شروع مکالمه صوتی" class="flex-shrink-0 w-14 h-14 bg-gradient-to-br from-gray-600 to-gray-900 rounded-full flex items-center justify-center text-white text-2xl transition-all duration-300 transform hover:scale-105">
-                <i class="fa-solid fa-microphone"></i>
-            </button>
+            <input type="text" id="chat-input" placeholder="پیام خود را بنویسید..." class="flex-grow bg-transparent border-none focus:outline-none text-white placeholder-gray-400">
+            <div class="relative flex-shrink-0 w-14 h-14">
+              <button id="send-text-btn" aria-label="ارسال پیام" class="absolute inset-0 w-full h-full bg-gradient-to-br from-emerald-600 to-green-900 rounded-full flex items-center justify-center text-white text-2xl transition-all duration-300 transform hover:scale-105 hidden">
+                  <i class="fa fa-paper-plane"></i>
+              </button>
+              <button id="main-action-btn" aria-label="شروع مکالمه صوتی" class="absolute inset-0 w-full h-full bg-gradient-to-br from-gray-600 to-gray-900 rounded-full flex items-center justify-center text-white text-2xl transition-all duration-300 transform hover:scale-105">
+                  <i class="fa-solid fa-microphone"></i>
+              </button>
+            </div>
         </div>
         <div class="shen-footer text-center text-xs mt-3">
-            <a href="https://t.me/IAMHamidrreza" target="_blank" rel="noopener noreferrer">Exclusive Hamid™ made</a>
+            <a href="https://t.me/shervini" target="_blank" rel="noopener noreferrer">Exclusive SHΞN™ made</a>
         </div>
     </div>
   </footer>
