--- a/index.html
+++ b/index.html
@@ -215,6 +215,24 @@
     </div>
   </footer>
 
+  <!-- API Key Modal -->
+  <div id="api-key-modal" class="fixed inset-0 bg-black/80 backdrop-blur-lg flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="api-key-modal-title">
+    <div class="glass-effect rounded-lg p-8 w-full max-w-md m-4 text-center">
+        <h2 id="api-key-modal-title" class="text-2xl font-bold mb-4 text-white">انتخاب کلید API</h2>
+        <p class="text-secondary-text mb-6">
+            برای استفاده از تمام قابلیت‌های پیشرفته برنامه، مانند مکالمه زنده، نیاز به یک کلید API معتبر دارید. لطفاً کلید خود را انتخاب کنید.
+        </p>
+        <button id="select-api-key-btn" class="w-full px-4 py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors font-semibold text-lg">
+            انتخاب کلید
+        </button>
+         <p class="text-xs text-gray-500 mt-4">
+            مطمئن شوید که Gemini API برای پروژه شما فعال است. 
+            <a href="https://ai.google.dev/gemini-api/docs/billing" target="_blank" rel="noopener" class="text-blue-400 hover:underline">راهنمای فعال‌سازی</a>
+        </p>
+    </div>
+  </div>
+
+
   <!-- Profile Modal -->
   <div id="profile-modal" class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center hidden z-50" role="dialog" aria-modal="true" aria-labelledby="profile-modal-title" aria-hidden="true">
     <div class="glass-effect rounded-lg p-6 w-full max-w-md m-4">
